--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<title> Chaoyi Troy Kuang </title>
+	</head>
+
+	<body>
+		<p>
+			Under Construction. Get back later <3 
+		</p>
+
+	</body>
+
+</html>
+
