--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	</head>
 
 	<body>
-		<p>
-			Under Construction. Get back later <3 
-		</p>
+		<p>Under Construction. Get back later <3</p>
+		<p>Meanwhile, you can listen to songs by FIRST AID KIT. THEY ARE GOOD FOR YOUR SOUL.</p>
+
 
 	</body>
 
