--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 	<body>
 		<p>Under Construction. Get back later <3</p>
-		<p>Meanwhile, you can listen to songs by FIRST AID KIT. THEY ARE GOOD FOR YOUR SOUL.</p>
+		<p>Meanwhile, you can listen to songs by FIRST AID KIT. </p>
+		<p><h1>THEY ARE GOOD FOR YOUR SOUL.</h1></p>
 
 
 	</body>
