--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 	</head>
 
 	<body>
-		<p>Under Construction. Get back later <3</p>
+		<p><center>Under Construction. Get back later <3<center></p>
 		<p>Meanwhile, you can listen to songs by FIRST AID KIT. </p>
 		<p><h1>THEY ARE GOOD FOR YOUR SOUL.</h1></p>
+		<p>Cheers,</p>
+		<p>Troy</p>
 
 
 	</body>
