--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<p>Meanwhile, you can listen to songs by FIRST AID KIT. </p>
 			<p><h1>THEY ARE GOOD FOR YOUR SOUL.</h1></p>
 			<p>Cheers,</p>
-			<p>Troy</p>
+			<p>Your friendly neighborhood codemonkey Troy</p>
 		</center>
 
 
